--- a/package.json
+++ b/package.json
@@ -21,12 +21,29 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs-modules/mailer": "^1.6.1",
+    "@nestjs/axios": "^0.0.7",
+    "@nestjs/common": "^8.1.1",
+    "@nestjs/core": "^8.1.1",
+    "@nestjs/mongoose": "^9.0.3",
+    "@nestjs/platform-express": "^8.1.1",
+    "@nestjs/swagger": "^5.2.1",
+    "@sentry/node": "^6.19.7",
+    "@sentry/tracing": "^6.19.7",
+    "axios": "^0.26.1",
+    "bson": "^4.6.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
+    "facebook-nodejs-business-sdk": "^13.0.0",
+    "mongoose": "^6.3.1",
+    "nest-winston": "^1.6.2",
+    "nodemailer": "^6.7.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.4.0",
+    "swagger-ui-express": "^4.3.0",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
