--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "santoryu-backend",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "name": "nest-typescript-starter",
   "private": true,
-  "license": "UNLICENSED",
+  "version": "1.0.0",
+  "description": "Nest TypeScript starter repository",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -22,23 +21,17 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.6.1",
-    "@nestjs/axios": "^0.0.7",
+    "@nestjs/axios": "^0.0.8",
     "@nestjs/common": "^8.1.1",
     "@nestjs/core": "^8.1.1",
     "@nestjs/mongoose": "^9.0.3",
     "@nestjs/platform-express": "^8.1.1",
+    "@nestjs/schedule": "^1.1.0",
     "@nestjs/swagger": "^5.2.1",
-    "@sentry/node": "^6.19.7",
-    "@sentry/tracing": "^6.19.7",
-    "axios": "^0.26.1",
-    "bson": "^4.6.3",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "cookie-parser": "^1.4.6",
-    "facebook-nodejs-business-sdk": "^13.0.0",
-    "mongoose": "^6.3.1",
+    "@types/cron": "^2.0.0",
+    "axios": "^0.27.2",
+    "mongoose": "^6.3.3",
     "nest-winston": "^1.6.2",
-    "nodemailer": "^6.7.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
@@ -46,27 +39,27 @@
     "winston": "^3.7.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/cli": "^8.1.3",
+    "@nestjs/schematics": "^8.0.4",
+    "@nestjs/testing": "^8.1.1",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.5.0",
-    "@types/node": "^16.0.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.1",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.0.3",
-    "prettier": "^2.3.2",
+    "eslint-plugin-prettier": "^3.4.1",
+    "jest": "^27.3.0",
+    "prettier": "^2.4.1",
     "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.1",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.3.0",
+    "tsconfig-paths": "^3.11.0",
+    "typescript": "^4.4.4"
   },
   "jest": {
     "moduleFileExtensions": [
